syntax = "proto3";
package storage;


import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

option go_package = "/storage";

message Field {
    string name = 1;
    google.protobuf.Value value = 2;
}


message Customer {
    string id = 1;
    string surname = 2;
    string name = 3;
    string patronymic = 4;
    optional uint32 age = 5;
    google.protobuf.Timestamp reg_date = 6;
}

message CustomerResponce {
    bool success = 1;
    int32 status = 2;
    string message = 3;
    repeated Customer customers = 4;
    repeated Field fields = 5;
}

message CustomerRequest {
    repeated Customer customers = 1;
    optional string field_name = 2;
}


message Shop {
    string id = 1;
    string name = 2;
    string address = 3;
    optional bool is_closed = 4;
    optional string owner = 5;
}

message ShopResponce {
    bool success = 1;
    int32 status = 2;
    string message = 3;
    repeated Shop shops = 4;
    repeated Field fields = 5;
}

message ShopRequest {
    repeated Shop shops = 1;
    optional string field_name = 2;
}


service StorageService {
    rpc CreateCustomer(CustomerRequest) returns (CustomerResponce);
    rpc ReadCustomer(CustomerRequest) returns (CustomerResponce);
    rpc DeleteCustomer(CustomerRequest) returns (CustomerResponce);
    rpc ReadCustomerBySearchField(CustomerRequest) returns (CustomerResponce);
    rpc ReadCustomerFieldById(CustomerRequest) returns (CustomerResponce);

    rpc CreateShop(ShopRequest) returns (ShopResponce);
    rpc ReadShop(ShopRequest) returns (ShopResponce);
    rpc DeleteShop(ShopRequest) returns (ShopResponce);
    rpc ReadShopBySearchField(ShopRequest) returns (ShopResponce);
    rpc ReadShopFieldById(ShopRequest) returns (ShopResponce);
}